fix styles + optimize long title on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -89,6 +89,13 @@
       font-size: $small-font-size;
     }
 
+    .post-break {
+      display: none;
+      @include media-query($on-palm) {
+        display: inline;
+      }
+    }
+
     .post-link {
       display: inline-block;
 
